# raylib-game-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Config.cmake  ExternalsUtils.cmake  SymlinkContent.cmake  Utils.cmake
cmake/dependencies/: cimgui.cmake  example_library.cmake  raylib.cmake  rlImGui.cmake
cmake/presets/: base.json  clang.json  emscripten.json  gcc.json  msvc.json
cmake/toolchains/windows/: README.md  VSWhere.cmake  Windows.MSVC.toolchain.cmake
src/: CMakeLists.txt  main.c
